💄 Update Composable to check for permission before setting an alarm
The Composable for AlarmSelection was updated to check for the
permission when the user clicks to set a new alarm. A very simple
logic was created along with the previous exact alarm permission. In the
worst case scenario, the user may need to see and grant two dialog
permissions in a row. However, this is unlikely since the exact alarm
permission is already granted by default.

In order to avoid the size of the file increase a lot, the dialogs were
moved to a different file. Lastly, new strings were added to inform the
user about the permissions both in English and Portuguese.

--- a/features/task/src/main/res/values-pt-rBR/strings.xml
+++ b/features/task/src/main/res/values-pt-rBR/strings.xml
@@ -22,4 +22,8 @@
     <string name="task_alarm_permission_dialog_cancel">Agora não</string>
     <string name="task_alarm_permission_dialog_title">Alarmes e lembretes</string>
     <string name="task_alarm_permission_dialog_text">Para que os alarmes funcionem, o Alkaa precisa da permissão para definir alarmes e lembretes. Se essa permissão não for concedida, os alarmes existentes também não funcionarão.</string>
+    <string name="task_notification_permission_dialog_title">Notificações</string>
+    <string name="task_notification_permission_dialog_confirm">Dar permissão</string>
+    <string name="task_notification_permission_dialog_cancel">Agora não</string>
+    <string name="task_notification_permission_dialog_text">Para que os alarmes sejam notificados, o Alkaa precisa da permissão para enviar notificações. Se essa permissão não for concedida, os alarmes existentes também não funcionarão.</string>
 </resources>
