--- a/features/task/src/main/res/values/strings.xml
+++ b/features/task/src/main/res/values/strings.xml
@@ -28,4 +28,9 @@
     <string name="task_alarm_permission_dialog_text">In order to alarms work, Alkaa needs the permission to set alarms and reminders. If this permission is not granted, the existing alarms will not work as well.</string>
     <string name="task_alarm_permission_dialog_confirm">Grant permission</string>
     <string name="task_alarm_permission_dialog_cancel">Not now</string>
+
+    <string name="task_notification_permission_dialog_title">Notifications</string>
+    <string name="task_notification_permission_dialog_text">In order to notify the alarms, Alkaa needs the permission to launch notifications. If this permission is not granted, the existing alarms will not work as well.</string>
+    <string name="task_notification_permission_dialog_confirm">Grant permission</string>
+    <string name="task_notification_permission_dialog_cancel">Not now</string>
 </resources>
