--- a/features/alarm/src/main/res/values/strings.xml
+++ b/features/alarm/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
+    <!-- Notification app name -->
+    <string name="content_app_name" translatable="false">Alkaa</string>
+
     <!-- Task notification channel -->
     <string name="channel_task_name">Task alarms</string>
     <string name="channel_task_description">Notifications for reminders</string>
