Added theming in the glance widget AlkaaGlanceTheme provides the glance theme,its used to get the dynamic colors,providing the color-provider by ColorProviders on Android 12+ dynamic color is taken in using material3 glance dependency and below that designed system colors. Under Android 12 glance docent provides corner radius thus a shape drawable with the similar color radius  is implemented with surface colors. Additionally due to the theme change preview is not properly visible in the widget drawer so added surface and surface color values For No task additional vector resource is used to designate there is no tasks. The heading of the widget was looking blank so added the Heading "Your Tasks",for the portuguese I just googled the translation,please change them if they are wrong. TaskListGlanceWidget changes are added, changes include use of GlanceTheme.colors provider as color provider and some others. In loading and preview added the background which is the same drawable mentioned above

--- a/features/glance/src/main/res/values-pt-rBR/strings.xml
+++ b/features/glance/src/main/res/values-pt-rBR/strings.xml
@@ -5,4 +5,6 @@
     <string name="glance_list_preview_item_1">Comprar leite</string>
     <string name="glance_list_preview_item_2">Assistir Ponyo</string>
     <string name="glance_list_preview_item_3">Ouvir Local Natives</string>
+    <string name="glance_heading">Sua tarefa</string>
+    <string name="glance_no_tasks">Nenhuma Tarefa</string>
 </resources>
