--- a/features/glance/src/main/res/values/strings.xml
+++ b/features/glance/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="glance_list_preview_item_1">Buy milk</string>
     <string name="glance_list_preview_item_2">Watch Ponyo</string>
     <string name="glance_list_preview_item_3">Listen Local Natives</string>
+    <string name="glance_heading">Your Tasks</string>
+    <string name="glance_no_tasks">No Tasks</string>
 </resources>
