--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- AppTopBar -->
-    <string name="home_title_tasks">Tasks</string>
-    <string name="home_title_search">Search</string>
-    <string name="home_title_categories">Categories</string>
-    <string name="home_title_settings">More</string>
+    <string name="app_name" translatable="false">Alkaa</string>
 
     <!-- Suppress `UnusedResources` due to some bug on Dynamic Features tags -->
     <string name="dynamic_feature_title_tracker" translatable="false" tools:ignore="UnusedResources">Task Tracker</string>
