--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,3 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-
+<resources>
     <string name="app_name" translatable="false">Alkaa</string>
-
-    <!-- Suppress `UnusedResources` due to some bug on Dynamic Features tags -->
-    <string name="dynamic_feature_title_tracker" translatable="false" tools:ignore="UnusedResources">Task Tracker</string>
-
 </resources>
