📝 Improve wording and fix typos in string resources
Corrected several typos and improved the grammar and phrasing across
various user-facing strings for better clarity and a more polished user
experience. This includes updates to permission dialogs, error messages,
and the "About" section.

--- a/features/glance/src/androidMain/res/values/strings.xml
+++ b/features/glance/src/androidMain/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="glance_list_loading">Loading</string>
     <string name="glance_list_preview_item_1">Buy milk</string>
     <string name="glance_list_preview_item_2">Watch Ponyo</string>
-    <string name="glance_list_preview_item_3">Listen Local Natives</string>
+    <string name="glance_list_preview_item_3">Listen to Local Natives</string>
     <string name="glance_heading">Your Tasks</string>
     <string name="glance_no_tasks">No Tasks</string>
     <string name="glance_app_icon_content_description">App Icon</string>
